Good work, bit of formatting, image size is an issue though

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,115 +2,97 @@
 
 <html>
 
-    <head>
-        <title>Sara's website</title>
-        <link href="index.css" rel="stylesheet" type="text/css">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;900&family=Montserrat&family=Permanent+Marker&display=swap" rel="stylesheet">
-    </head>
+<head>
+    <title>Sara's website</title>
+    <link href="index.css" rel="stylesheet" type="text/css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;900&family=Montserrat&family=Permanent+Marker&display=swap" rel="stylesheet">
+</head>
 
-    <body>
+<body>
 
-        <header>
-            <h1>Sara Bonnin Richaud</h1>
-            <ul class="linkmenu">
-                <!--Menu below the title with links to other pages (html and external)-->
-                <li class="menuitem"><a href="index.html">Home Page</a></li>
-                <li class="menuitem"><a href="https://www.linkedin.com/in/sarabonninrichaud" target="_blank">LinkedIn</a></li>
-                <li class="menuitem"><a href="https://clicktocode.wordpress.com" target="_blank">Coding Blog</a></li>
-                <li class="menuitem"><a href="https://github.com/SaraClick" target="_blank">GitHub</a></li>
-            </ul>
-        </header>
-        <br>
+    <header>
+        <h1>Sara Bonnin Richaud</h1>
+        <ul class="linkmenu">
+            <!--Menu below the title with links to other pages (html and external)-->
+            <li class="menuitem"><a href="index.html">Home Page</a></li>
+            <li class="menuitem"><a href="https://www.linkedin.com/in/sarabonninrichaud" target="_blank">LinkedIn</a></li>
+            <li class="menuitem"><a href="https://clicktocode.wordpress.com" target="_blank">Coding Blog</a></li>
+            <li class="menuitem"><a href="https://github.com/SaraClick" target="_blank">GitHub</a></li>
+        </ul>
+    </header>
+    <br>
 
-        <main>
+    <main>
 
-            <h2>About Me</h2>
-            <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFAEJkIwfmZBQ/profile-displayphoto-shrink_200_200/0/1628174627992?e=1637798400&v=beta&t=xiImGZNwOPoBxujZuuCVYbMdkKWEycxAKgi9zN18lVM" alt="Profile pic">
-
-
-            <!--Introduction using table format for Q&A-->
-
-            <h2>Personal Q&A</h2>
-
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Question</th>
-                            <th>Answer</th>
-                        </tr>
-                    </thead>
-                    <tr>
-                        <td>What is your name?</td>
-                        <td>Sara</td>
-                    </tr>
-                    <tr>
-                        <td>What are your surnames?</td>
-                        <td>Bonnin Richaud</td>
-                    </tr>
-                    <tr>
-                        <td>How old are you?</td>
-                        <td><a href="https://i.blogs.es/9873f2/650_1000_grumpy-cat/450_1000.jpg" target="_blank"> click here </a></td>
-                    </tr>
-                    <tr>
-                        <td>Where do you live?</td>
-                        <td>London</td>
-                    </tr>
-                    <tr>
-                        <td>Where are you from?</td>
-                        <td>
-                            <iframe id="hometown"
-                                title="Andratx, my home town"
-                                width="300"
-                                height="300"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12301.571779170998!2d2.410366436606427!3d39.57329357155149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1298211d105bbb83%3A0x850184f8ae8942ba!2s07150%20Andratx%2C%20Islas%20Baleares!5e0!3m2!1ses!2ses!4v1632764198290!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                            </iframe>
-                        </td>
-                    </tr>
-                </table>
-                </br>
+        <h2>About Me</h2>
+        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFAEJkIwfmZBQ/profile-displayphoto-shrink_200_200/0/1628174627992?e=1637798400&v=beta&t=xiImGZNwOPoBxujZuuCVYbMdkKWEycxAKgi9zN18lVM" alt="Profile pic">
 
 
-            <!--Additional section to practice video & spotify playlists-->
+        <!--Introduction using table format for Q&A-->
 
-            <h2>Recommended TED Talk and Spotify list</h2>
-            <p>Familiar with the term of procrastination? Yipe! I absolutely loved this TED Talk so I wanted to share this with you all.</p>
-                <div class="video">
-                    <iframe width="560" 
-                            height="315" 
-                            src="https://www.youtube.com/embed/arj7oStGLkU" 
-                            title="Inside the mind of a master procrastinator | Tim Urban" 
-                            frameborder="0" 
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                            allowfullscreen>
+        <h2>Personal Q&A</h2>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Question</th>
+                    <th>Answer</th>
+                </tr>
+            </thead>
+            <tr>
+                <td>What is your name?</td>
+                <td>Sara</td>
+            </tr>
+            <tr>
+                <td>What are your surnames?</td>
+                <td>Bonnin Richaud</td>
+            </tr>
+            <tr>
+                <td>How old are you?</td>
+                <td><a href="https://i.blogs.es/9873f2/650_1000_grumpy-cat/450_1000.jpg" target="_blank"> click here </a></td>
+            </tr>
+            <tr>
+                <td>Where do you live?</td>
+                <td>London</td>
+            </tr>
+            <tr>
+                <td>Where are you from?</td>
+                <td>
+                    <iframe id="hometown" title="Andratx, my home town" width="300" height="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12301.571779170998!2d2.410366436606427!3d39.57329357155149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1298211d105bbb83%3A0x850184f8ae8942ba!2s07150%20Andratx%2C%20Islas%20Baleares!5e0!3m2!1ses!2ses!4v1632764198290!5m2!1ses!2ses"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </iframe>
-                </div>
+                </td>
+            </tr>
+        </table>
+        </br>
 
-            <p>I love to work with my headphones plugged however I am picky with the type of music: only instrumental 
-                (or white noise when studying). When I have a really busy day or I am in need of selfmotivation to do 
-                something, this is my to go playlist. I am really looking forward to attend next year´s concert at the 
-                Albert Hall with the battle songs between these 2 genious soundtracks by the London Concert Orchestra, 
-                check the tickets out here if you are interested: 
-                <a href="https://www.royalalberthall.com/tickets/events/2022/the-music-of-hans-zimmer-vs-john-williams/" 
-                    target="_blank"> Concert Tickets </a></p>
-                <div class="playlist">
-                    <iframe src="https://open.spotify.com/embed/playlist/0gfSqyFtMZ8Z9Ceelrx1iI?theme=0" 
-                        width="100%" 
-                        height="380" 
-                        frameBorder="0" 
-                        allowfullscreen="" 
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+
+        <!--Additional section to practice video & spotify playlists-->
+
+        <h2>Recommended TED Talk and Spotify list</h2>
+        <p>Familiar with the term of procrastination? Yipe! I absolutely loved this TED Talk so I wanted to share this with you all.</p>
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/arj7oStGLkU" title="Inside the mind of a master procrastinator | Tim Urban" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
                     </iframe>
-                </div>
-            </br>
-        </main>
-    </body>
+        </div>
 
-    <footer>
-        <p>Sara Bonnin Richaud <br>
-           Code First Girls | Web Development course</p>
-    </footer>
+        <p>I love to work with my headphones plugged however I am picky with the type of music: only instrumental (or white noise when studying). When I have a really busy day or I am in need of selfmotivation to do something, this is my to go playlist.
+            I am really looking forward to attend next year´s concert at the Albert Hall with the battle songs between these 2 genious soundtracks by the London Concert Orchestra, check the tickets out here if you are interested:
+            <a href="https://www.royalalberthall.com/tickets/events/2022/the-music-of-hans-zimmer-vs-john-williams/" target="_blank"> Concert Tickets </a></p>
+        <div class="playlist">
+            <iframe src="https://open.spotify.com/embed/playlist/0gfSqyFtMZ8Z9Ceelrx1iI?theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+                    </iframe>
+        </div>
+        </br>
+    </main>
+</body>
+
+<footer>
+    <p>Sara Bonnin Richaud <br> Code First Girls | Web Development course</p>
+</footer>
 
 </html>
